--- a/app/client/main.html
+++ b/app/client/main.html
@@ -2,9 +2,10 @@
   <meta charset="utf-8">
   <link rel="shortcut icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>meteor-application-template</title>
+  <title>digits</title>
+  <link type="text/css" href="style.css">
 </head>
 
-<body>
+<body style='background-color: #1B1C1D'>
   <div id="root"></div>
 </body>
